--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -31,6 +31,7 @@
 @import "pages/product_page";
 @import "pages/products_catalog";
 @import "pages/translation_page";
+@import "pages/currencies_page";
 
 // Main Layout
 @import "pages/modules";
