--- a/src/PrestaShopBundle/Resources/views/Admin/Product/Include/form_seo.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Product/Include/form_seo.html.twig
@@ -123,6 +123,7 @@
     </div>
   </div>
 
+  {{ form_rest(form) }}
   {{ renderhook('displayAdminProductsSeoStepBottom', { 'id_product': id_product }) }}
 
 </div>
