WIP: tested on Product page - to be removed

--- a/src/PrestaShopBundle/Resources/views/Admin/Product/ProductPage/Forms/form_seo.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Product/ProductPage/Forms/form_seo.html.twig
@@ -123,5 +123,7 @@
     </div>
   </div>
 
-  {{ renderhook('displayAdminProductsSeoStepBottom', { 'id_product': productId }) }}
+  {{ form_rest(form) }}
+
+  {{ renderhook('displayAdminProductsSeoStepBottom', { 'id_product': id_product }) }}
 </div>
