--- a/src/PrestaShopBundle/Resources/views/Admin/Product/ProductPage/Forms/form_seo.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Product/ProductPage/Forms/form_seo.html.twig
@@ -123,7 +123,7 @@
     </div>
   </div>
 
-  {{ form_rest(form) }}
+  {{ form_rest(seoForm) }}
 
   {{ renderhook('displayAdminProductsSeoStepBottom', { 'id_product': id_product }) }}
 </div>
