--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -2,6 +2,17 @@
 
   padding-bottom: 80px;
 
+  .widget-radio-inline {
+    div.radio {
+      display:inline;
+    }
+    label {
+      display:inline;
+    }
+    span {
+      display:inline;
+    }
+  }
   .table-fixed {
     table-layout: fixed;
     border: 0;
