BO: Define default value, based on product settings

--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -7,9 +7,10 @@
       display:inline;
     }
     label {
-      display:inline;
+      display:inline-block;
     }
-    span {
+    a.btn {
+      height: 29px;
       display:inline;
     }
   }
