BO: fixed Domain name translation

--- a/src/PrestaShopBundle/Resources/views/Admin/AdvancedParameters/system_information.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/AdvancedParameters/system_information.html.twig
@@ -74,7 +74,7 @@
 
         <div class="card">
             <h3 class="card-header">
-                <i class="material-icons">info_outline</i> {{ 'Database information'|trans({}, 'messages') }}
+                <i class="material-icons">info_outline</i> {{ 'Database information'|trans({}, 'Admin.Advparameters.Feature') }}
             </h3>
             <div class="card-block">
                 <div class="card-text">
