BO: enable save actions only when javascript is loaded

--- a/src/PrestaShopBundle/Resources/views/Admin/Product/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Product/form.html.twig
@@ -1142,6 +1142,7 @@
           value="{{ 'Save'|trans({}, 'Admin.Actions') }}"
           data-toggle="pstooltip"
           title="{{ 'Save the product and stay on the current page: ALT+SHIFT+S'|trans({}, 'Admin.Catalog.Help') }}"
+          disabled
           />
 
           <div class="js-spinner spinner hide btn-primary-reverse onclick mr-1 btn"></div>
