--- a/src/PrestaShopBundle/Resources/views/Admin/Product/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Product/form.html.twig
@@ -1219,16 +1219,8 @@
 
 {% block javascripts %}
   {{ parent() }}
-  <script src="{{ asset('themes/default/js/bundle/product/form.js') }}"></script>
+  <script src="{{ asset('themes/default/public/productPage.bundle.js') }}"></script>
 
-  <script src="{{ asset('themes/default/js/bundle/product/product-manufacturer.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/product/product-related.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/product/product-category-tags.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/product/default-category.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/product/product-combinations.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/category-tree.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/module/module_card.js') }}"></script>
-  <script src="{{ asset('themes/default/js/bundle/modal-confirmation.js') }}"></script>
   <script src="{{ asset('../js/tiny_mce/tiny_mce.js') }}"></script>
   <script src="{{ asset('../js/admin/tinymce.inc.js') }}"></script>
   <script src="{{ asset('../js/admin/tinymce_loader.js') }}"></script>
