--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
@@ -256,6 +256,17 @@
     {% endspaceless %}
 {% endblock date_picker_widget %}
 
+{% block switch_widget %}
+    <span class="ps-switch">
+        {% for choice in choices %}
+            {% set name = id ~'_' ~ choice.value %}
+            <input name="{{id}}" id="{{name}}" value="{{ choice.value }}" {%- if choice is selectedchoice(value) -%}checked="" {%- endif -%} type="radio">
+            <label for="{{name}}">{{ choice.label }}</label>
+        {% endfor %}
+        <span class="slide-button"></span>
+    </span>
+{% endblock switch_widget %}
+
 {% block _form_step6_attachments_widget %}
     <div class="js-options-no-attachments {{ form|length > 0 ? 'hide' : '' }}">
         <small>{{ 'There is no attachment yet.'|trans({}, 'Admin.Catalog.Notification') }}</small>
