--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_horizontal_layout.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_horizontal_layout.html.twig
@@ -102,3 +102,9 @@
     {% endif %}
 </div>
 {% endblock text_with_unit_widget %}
+
+{% block switch_widget %}
+<div class="input-group">
+    {{- parent() -}}
+</div>
+{% endblock %}
