--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
@@ -257,10 +257,10 @@
 {% endblock date_picker_widget %}
 
 {% block switch_widget %}
-    <span class="ps-switch">
+    <span {{ block('attributes') }}>
         {% for choice in choices %}
             {% set name = id ~'_' ~ choice.value %}
-            <input name="{{id}}" id="{{name}}" value="{{ choice.value }}" {%- if choice is selectedchoice(value) -%}checked="" {%- endif -%} type="radio">
+            <input name="{{id}}" id="{{name}}" value="{{ choice.value }}" {%- if choice is selectedchoice(value) -%}checked="" {%- endif -%} {%- if disabled -%}disabled="" {%- endif -%} type="radio">
             <label for="{{name}}">{{ choice.label }}</label>
         {% endfor %}
         <span class="slide-button"></span>
