--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -27,6 +27,7 @@
 @import "components/datepicker";
 @import "components/help_box";
 @import "components/ps_dropdown";
+@import "components/translatable-input";
 
 // Pages specifics SCSS files
 @import "pages/product_page";
