--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/bootstrap_3_layout.html.twig
@@ -257,14 +257,16 @@
 {% endblock date_picker_widget %}
 
 {% block switch_widget %}
-    <span {{ block('attributes') }}>
+    {% spaceless %}
+    <span class="ps-switch">
         {% for choice in choices %}
             {% set name = id ~'_' ~ choice.value %}
-            <input id="{{name}}" {{ block('widget_attributes') }} name="{{id}}" value="{{ choice.value }}" {%- if choice is selectedchoice(value) -%}checked="" {%- endif -%} {%- if disabled -%}disabled="" {%- endif -%} type="radio">
-            <label for="{{name}}">{{ choice.label }}</label>
+            <input id="{{name}}" {{ block('attributes') }} name="{{ full_name }}" value="{{ choice.value }}" {%- if choice is selectedchoice(value) -%}checked="" {%- endif -%} {%- if disabled -%}disabled="" {%- endif -%} type="radio">
+            <label for="{{name}}">{{ choice.label|trans({}, choice_translation_domain) }}</label>
         {% endfor %}
         <span class="slide-button"></span>
     </span>
+    {% endspaceless %}
 {% endblock switch_widget %}
 
 {% block _form_step6_attachments_widget %}
