Prevent Shopname in Header from breaking elements
Fixed the width size, since on shops with a long shop name can break the remaining elements on the right.

--- a/admin-dev/themes/default/sass/partials/_header.sass
+++ b/admin-dev/themes/default/sass/partials/_header.sass
@@ -24,6 +24,10 @@
 #header_shopname
 	@extend .navbar-brand
 	text-decoration: none
+	max-width: 150px
+	overflow: hidden
+	white-space: nowrap
+	text-overflow: ellipsis
 
 #header_notifs_icon_wrapper
 	@extend .nav
