--- a/themes/classic/_dev/css/theme.scss
+++ b/themes/classic/_dev/css/theme.scss
@@ -120,7 +120,7 @@
       }
     }
     .search-widget {
-      margin-top: 3px;
+      margin-top: 0.2rem;
     }
     .material-icons {
       line-height: inherit;
@@ -238,7 +238,7 @@
       max-height: inherit;
       .search-widget {
        float: none;
-       width: 250px;
+       width: 15.63rem;
       }
     }
   }
@@ -268,7 +268,7 @@
   #blockcart-modal .product-image {
     width: 100%;
     display: block;
-    max-width: 250px;
+    max-width: 15.63rem;
     margin: 0 auto 0.9375rem;
   }
   #blockcart-modal .cart-content {
