--- a/themes/classic/_dev/css/theme.scss
+++ b/themes/classic/_dev/css/theme.scss
@@ -150,6 +150,9 @@
       color: $gray;
       text-transform: uppercase;
     }
+    .search-widget {
+      float: right;
+    }
   }
   .top-menu-link {
     margin-left: $medium-space;
