--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/maintenance.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/maintenance.html.twig
@@ -56,8 +56,10 @@
                                 {{ form_errors(generalForm.maintenance_text) }}
                                 {{ form_widget(generalForm.maintenance_text) }}
                             </div>
+                            {{ form_rest(generalForm) }}
                         </div>
                     </div>
+                    {{ form_rest(form) }}
                     <div class="d-flex justify-content-end">
                         <button class="btn btn-primary">{{ 'Save'|trans({}, 'Admin.Actions') }}</button>
                     </div>
