--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/OrderReturn/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/OrderReturn/Blocks/form.html.twig
@@ -23,7 +23,7 @@
  * International Registered Trademark & Property of PrestaShop SA
  *#}
 
-{{ form_start(orderReturnForm, {action: path('admin_order_returns_update', {'orderReturnId': orderReturnForEditing.orderReturnId})}) }}
+{{ form_start(orderReturnForm) }}
 <div class="card">
   <h3 class="card-header">
     <i class="material-icons">person</i>
