--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
@@ -23,7 +23,7 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  *#}
 
-{% form_theme categoryForm '@PrestaShop:Admin/TwigTemplateForm:prestashop_ui_kit.html.twig' %}
+{% form_theme categoryForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block category_form_block %}
 {{ form_start(categoryForm, {'attr': {'data-id': categoryId|default(0)}}) }}
