Add stock movement histories to product page v2

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -1254,9 +1254,12 @@ $product-page-padding-bottom: 80px !default;
     }
   }
 
-  #product_stock_quantities_stock_movements {
-    max-width: 400px;
+  #product_stock_quantities_stock_movement_histories {
+    max-width: 600px;
+  }
 
+  #product_stock_quantities_stock_movement_histories,
+  #combination_form_stock_quantities_stock_movement_histories {
     .table {
       margin-bottom: 0.8rem;
     }
