--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
@@ -43,7 +43,8 @@
   </div>
 
   {{ form_start(productForm, {'attr': {
-    'class': 'form-horizontal product-page justify-content-md-center product-form', 'novalidate': 'novalidate',
+    'class': 'form-horizontal product-page justify-content-md-center product-form',
+    'novalidate': 'novalidate',
     'data-product-id': productId,
     'data-shop-id': shopId,
     'data-product-type': productType
