Create TypeScript component to select a store from the list

--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -55,6 +55,7 @@
 @import "components/modulescards";
 @import "components/multishop-modal";
 @import "components/multistore-dropdown";
+@import "components/multishop-selector";
 @import "components/navigation_tab";
 @import "components/notifications";
 @import "components/password";
