Integrate shop selector with product creation, introduce a twig helper to render the selector HTML template

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/index.html.twig
@@ -29,6 +29,10 @@
 {% endblock %}
 
 {% block content %}
+  <div class="d-none">
+    {{ getShopSelector() }}
+  </div>
+
   {% block products_listing %}
     {% include '@PrestaShop/Admin/Sell/Catalog/Product/Grid/grid_panel.html.twig' with {'grid': productGrid} %}
   {% endblock %}
