Shop selector is only shown in creation form when All shops is selected, it hides after the shop selection

--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/multishop.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/multishop.html.twig
@@ -63,7 +63,7 @@
       {% endfor %}
     </ul>
 
-    {% set attr = attr|merge({'class': 'shop-selector-input'}) %}
+    {% set attr = attr|merge({'class': 'd-none shop-selector-input'}) %}
     {{ block('choice_widget') }}
   </div>
 {% endblock %}
