--- a/admin-dev/themes/new-theme/scss/components/_multishop-selector.scss
+++ b/admin-dev/themes/new-theme/scss/components/_multishop-selector.scss
@@ -83,6 +83,10 @@ $component-name: shop-selector;
     }
   }
 
+  &-shop-item.selected-shop {
+    background-color: rgba(37, 185, 215, 0.15);
+  }
+
   &-item {
     display: flex;
     align-items: center;
