--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
@@ -76,7 +76,7 @@
 
 
 {% block product_type_row %}
-  <div class="product-type-selector">
+  <div class="product-type-selector form-group">
     <div class="product-type-choices">
       {% for choice in form.vars.choices %}
         <button type="button" class="product-type-choice btn btn-outline-secondary" data-value="{{ choice.value }}" data-description="{{ choice.attr['data-description']|default(choice.label) }}">
