--- a/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/multishop.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/multishop.html.twig
@@ -25,13 +25,12 @@
 {% use 'bootstrap_4_layout.html.twig' %}
 
 {% block shop_selector_widget %}
-  <div class="shop-selector-content shop-selector">
+  <div class="shop-selector-content shop-selector" data-multiple="{{ multiple }}">
     <label>{{ 'Choose a shop'|trans({}, 'Admin.Global') }}</label>
     <div class="shop-selector-search-container">
       <i class="material-icons">search</i>
       <input type="text" class="form-control shop-selector-search js-shop-selector-search" placeholder="{{ 'Search shop name'|trans({}, 'Admin.Navigation.Header') }}" data-no-results="{{ "No results found for"|trans({}, 'Admin.Global') }}" data-searching="{{ "Searching for"|trans({}, 'Admin.Global') }}">
     </div>
-    {% dump(form) %}
 
     <ul class="shop-selector-group-list">
       {% for groupName, groupShops in form.vars.choices %}
@@ -40,22 +39,12 @@
         </li>
 
         {% for shopChoice in groupShops %}
-          {% dump(shopChoice) %}
           {% set shop = shopChoice.data %}
 
-          <li class="shop-selector-shop-item shop-selector-item" data-shop-id="{{ shop.id }}">
+          <li class="shop-selector-shop-item shop-selector-item{% if shop.id == contextShopId %} selected-shop current-shop disabled{% endif %}" data-shop-id="{{ shop.id }}">
             {% if multiple %}
               {{ block('shop_option_checkbox_widget') }}
-            {% endif %}
-
-            <div class="shop-selector-item-left">
-                  <span class="shop-selector-color-container">
-                    <span class="shop-selector-color"{% if shop.color is not empty %} style="background-color: {{shop.color}};"{% endif %}></span>
-                  </span>
-              {{ shop.name }}
-            </div>
-
-            {% if not multiple %}
+            {% else %}
               {{ block('shop_option_radio_widget') }}
             {% endif %}
           </li>
@@ -69,9 +58,37 @@
 {% endblock %}
 
 {% block shop_option_checkbox_widget %}
-  checkbox
+  <div class="md-checkbox md-checkbox-inline">
+    <label class="shop-selector-item-label">
+      <input
+        type="checkbox" data-value-type="boolean" class="form-check-input" value="{{ shop.id }}"
+        {% if shopChoice is selectedchoice(value) %}checked{% endif %}
+        {% if shop.id == contextShopId %}disabled="disabled"{% endif %}
+      />
+      <i class="md-checkbox-control"></i>
+      {{ block('shop_selector_item_name') }}
+    </label>
+  </div>
 {% endblock %}
 
 {% block shop_option_radio_widget %}
-  <i class="material-icons">arrow_forward</i>
+  {{ block('shop_selector_item_name') }}
+{% endblock %}
+
+{% block shop_selector_item_name %}
+  <div class="shop-selector-item-name">
+    <span class="shop-selector-color-container">
+      <span class="shop-selector-color"{% if shop.color is not empty %} style="background-color: {{shop.color}};"{% endif %}></span>
+    </span>
+    {{ shop.name }}
+    {% if not multiple %}
+      <i class="material-icons">arrow_forward</i>
+    {% else %}
+      <span class="shop-selector-status" data-added-label="{{ 'Added'|trans({}, 'Admin.Global') }}" data-removed-label="{{ 'Removed'|trans({}, 'Admin.Global') }}">
+        {% if shop.id == contextShopId %}
+          {{ 'Current shop'|trans({}, 'Admin.Global') }}
+        {% endif %}
+      </span>
+    {% endif %}
+  </div>
 {% endblock %}
