Add controller action to handle product shop association

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -1232,6 +1232,12 @@ $product-page-padding-bottom: 80px !default;
     }
   }
 
+  &.product-shops-form {
+    width: 100%;
+    padding: 0 1rem 0.1rem;
+    background-color: $white;
+  }
+
   .maxLength {
     float: none;
   }
