Filter only shops associated to product in multishop header

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
@@ -39,7 +39,7 @@
   {% set shopId = productForm.vars.shop_id %}
 
   <div class="header-toolbar d-print-none">
-    {{ multistoreHeader() }}
+    {{ multistoreProductHeader(productId) }}
   </div>
 
   {{ form_start(productForm, {'attr': {
