Add button for shops in product multishop header and display the form action in a modal

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -2399,6 +2399,12 @@ $product-page-padding-bottom: 80px !default;
   }
 }
 
+#modal-product-shops {
+  .modal-dialog {
+    max-width: 810px;
+  }
+}
+
 // Create product modal
 @import "create_product_modal";
 @import "product_light_list";
