--- a/admin-dev/themes/new-theme/scss/components/layout/_header-multistore.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_header-multistore.scss
@@ -38,7 +38,9 @@ $component-name: header-multishop;
     top: 50%;
     right: 1rem;
     z-index: 1002;
+    display: flex;
     transform: translateY(-50%);
+    gap: 10px;
 
     @include media-breakpoint-down(sm) {
       a {
@@ -153,6 +155,13 @@ $component-name: header-multishop;
       @include media-breakpoint-down(sm) {
         display: none;
       }
+    }
+  }
+
+  .product-shops-action {
+    svg {
+      width: 18px;
+      margin-left: 10px;
     }
   }
 }
