Added correct data to list

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -31,7 +31,11 @@
       <th>{{ 'Currency'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'Reduction'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'Reductino Type'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'From Quantity'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
       <td></td>
     </tr>
     </thead>
@@ -46,7 +50,11 @@
       <td class="currency"></td>
       <td class="country"></td>
       <td class="group"></td>
-      <td class="shop"></td>
+      <td class="reduction"></td>
+      <td class="reduction-type"></td>
+      <td class="from-qty"></td>
+      <td class="from"></td>
+      <td class="to"></td>
       <td>
         <button
           type="button"
