Added shop to list

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -31,6 +31,7 @@
       <th>{{ 'Currency'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Reduction'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Reductino Type'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'From Quantity'|trans({}, 'Admin.Global') }}</th>
@@ -50,6 +51,7 @@
       <td class="currency"></td>
       <td class="country"></td>
       <td class="group"></td>
+      <td class="shop"></td>
       <td class="reduction"></td>
       <td class="reduction-type"></td>
       <td class="from-qty"></td>
