--- a/admin-dev/themes/new-theme/scss/components/_form.scss
+++ b/admin-dev/themes/new-theme/scss/components/_form.scss
@@ -103,6 +103,10 @@
   }
 }
 
+.form-control-value {
+  padding-top: calc(0.375rem + 1px);
+}
+
 .invalid-feedback-container {
   padding-top: 8px;
 }
