Apply suggestions from code review
More minor fixes

Co-authored-by: Jonathan Lelievre <jo.lelievre@gmail.com>

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -33,7 +33,7 @@
       <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Reduction'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'Reductino Type'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'Reduction Type'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'From Quantity'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
