--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/form.html.twig
@@ -1,11 +1,10 @@
 {#**
- * Copyright since 2007 PrestaShop SA and Contributors
- * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
+ * 2007-2019 PrestaShop and Contributors
  *
  * NOTICE OF LICENSE
  *
  * This source file is subject to the Open Software License (OSL 3.0)
- * that is bundled with this package in the file LICENSE.md.
+ * that is bundled with this package in the file LICENSE.txt.
  * It is also available through the world-wide-web at this URL:
  * https://opensource.org/licenses/OSL-3.0
  * If you did not receive a copy of the license and are unable to
@@ -16,38 +15,117 @@
  *
  * Do not edit or add to this file if you wish to upgrade PrestaShop to newer
  * versions in the future. If you wish to customize PrestaShop for your
- * needs please refer to https://devdocs.prestashop.com/ for more information.
+ * needs please refer to https://www.prestashop.com for more information.
  *
- * @author    PrestaShop SA and Contributors <contact@prestashop.com>
- * @copyright Since 2007 PrestaShop SA and Contributors
+ * @author    PrestaShop SA <contact@prestashop.com>
+ * @copyright 2007-2019 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
+ * International Registered Trademark & Property of PrestaShop SA
  *#}
+
+{% import '@PrestaShop/Admin/macros.html.twig' as ps %}
 {% form_theme countryForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {{ form_start(countryForm) }}
-  <div class="card">
-    <h3 class="card-header">
-      {{ 'Country'|trans({}, 'Admin.International.Feature') }}
-    </h3>
+<div class="card">
+  <div class="card-header">
+    <i class="material-icons">public</i>
+    {{ 'Countries'|trans({}, 'Admin.Navigation.Menu') }}
+  </div>
 
-    <div class="card-body">
-      <div class="form-wrapper">
-        {{ form_errors(countryForm) }}
-        {% block form_country_widget %}
-          {{ form_widget(countryForm) }}
-        {% endblock %}
-      </div>
-    </div>
+  <div class="card-block row">
+    <div class="card-text">
 
-    <div class="card-footer">
-      <div class="d-inline-flex">
-        <a href="{{ path('admin_countries_index') }}" class="btn btn-outline-secondary">
-          {{ 'Cancel'|trans({}, 'Admin.Actions') }}
-        </a>
+      {{ form_errors(countryForm) }}
+
+      {{ ps.form_group_row(countryForm.name, {}, {
+        'label': 'Country'|trans({}, 'Admin.Global'),
+        'help' : 'Country name'|trans({}, 'Admin.International.Feature') ~ ' - ' ~ 'Invalid characters:'|trans({}, 'Admin.Global') ~ ' <>;=#{} '
+      }) }}
+
+      {{ ps.form_group_row(countryForm.iso_code, {}, {
+        'label': 'ISO code'|trans({}, 'Admin.International.Feature'),
+        'help' : 'Two -- or three -- letter ISO code (e.g. "us" for United States).'|trans({}, 'Admin.International.Help')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.call_prefix, {}, {
+        'label': 'Call prefix'|trans({}, 'Admin.International.Feature'),
+        'help' : 'International call prefix, (e.g. 1 for United States).'|trans({}, 'Admin.International.Help')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.default_currency, {}, {
+        'label': 'Default currency'|trans({}, 'Admin.International.Feature')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.zone, {}, {
+        'label': 'Zone'|trans({}, 'Admin.Global'),
+        'help' : 'Geographical region.'|trans({}, 'Admin.International.Help')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.need_zip_code, {}, {
+        'label': 'Does it need Zip/postal code?'|trans({}, 'Admin.International.Feature')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.zip_code_format, {}, {
+        'label': 'Zip/postal code format'|trans({}, 'Admin.International.Feature'),
+        'help' : 'Indicate the format of the postal code: use L for a letter, N for a number, and C for the country\'s ISO 3166-1 alpha-2 code. For example, NNNNN for the United States, France, Poland and many other; LNNNNLLL for Argentina, etc. If you do not want PrestaShop to verify the postal code for this country, leave it blank.'|trans({}, 'Admin.International.Help')
+      }) }}
+
+      <div class="form-group row">
+        <label class="form-control-label">
+          <span class="text-danger">*</span>
+          {{ 'Address format'|trans({}, 'Admin.International.Feature')}}
+        </label>
+        <div class="col-sm">
+          {{ form_widget(countryForm.address_format, {'attr': {'style': 'min-height: 200px'}}) }}
+          {{ form_errors(countryForm.address_format) }}
+        </div>
+        <div class="col-sm">
+          {% include '@PrestaShop/Admin/Improve/International/Country/Blocks/available_fields_content.html.twig' %}
+        </div>
       </div>
-      <div class="d-inline-flex float-right">
-        <button class="btn btn-primary" id="save-button">{{ 'Save'|trans({}, 'Admin.Actions') }}</button>
+
+      <div class="form-group row justify-content-end">
+        {% include '@PrestaShop/Admin/Improve/International/Country/Blocks/format_actions.html.twig' %}
       </div>
+
+      {{ ps.form_group_row(countryForm.is_enabled, {}, {
+        'label': 'Active'|trans({}, 'Admin.Global'),
+        'help' : 'Display this country to your customers (the selected country will always be displayed in the back office).'|trans({}, 'Admin.International.Help')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.contains_states, {}, {
+        'label': 'Contains states'|trans({}, 'Admin.International.Feature')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.need_identification_number, {}, {
+        'label': 'Do you need a tax identification number?'|trans({}, 'Admin.International.Feature')
+      }) }}
+
+      {{ ps.form_group_row(countryForm.display_tax_label, {}, {
+        'label': 'Display tax label (e.g. "Tax incl.")'|trans({}, 'Admin.International.Feature')
+      }) }}
+
+      {% if countryForm.shop_association is defined %}
+        {{ ps.form_group_row(countryForm.shop_association, {}, {
+          'label': 'Shop association'|trans({}, 'Admin.Global')
+        }) }}
+      {% endif %}
+
+      {{ form_widget(countryForm) }}
     </div>
   </div>
+
+  <div class="card-footer">
+    <div class="d-inline-flex">
+      <a href="{{ path('admin_countries_index') }}" class="btn btn-outline-secondary">
+        {{ 'Cancel'|trans({}, 'Admin.Actions') }}
+      </a>
+    </div>
+    <div class="d-inline-flex float-right">
+      <button class="btn btn-primary">{{ 'Save'|trans({}, 'Admin.Actions') }}</button>
+    </div>
+  </div>
+</div>
+
 {{ form_end(countryForm) }}
