--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/add.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/add.html.twig
@@ -1,5 +1,4 @@
-<?php
-/**
+{#**
  * 2007-2019 PrestaShop and Contributors
  *
  * NOTICE OF LICENSE
@@ -22,28 +21,20 @@
  * @copyright 2007-2019 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  * International Registered Trademark & Property of PrestaShop SA
- */
+ *#}
 
-namespace PrestaShop\PrestaShop\Core\ConstraintValidator\Constraints;
+{% extends '@PrestaShop/Admin/layout.html.twig' %}
 
-use PrestaShop\PrestaShop\Core\ConstraintValidator\AddressFormatValidator;
-use Symfony\Component\Validator\Constraint;
+{% block content %}
+  <div class="row justify-content-center">
+    <div class="col">
+      {% include '@PrestaShop/Admin/Improve/International/Locations/Country/Blocks/form.html.twig' %}
+    </div>
+  </div>
+{% endblock %}
 
-/**
- * Address format validation constraint
- */
-class AddressFormat extends Constraint
-{
-    /**
-     * @var string
-     */
-    public $message = '%s is invalid.';
+{% block javascripts %}
+  {{ parent() }}
 
-    /**
-     * {@inheritdoc}
-     */
-    public function validatedBy()
-    {
-        return AddressFormatValidator::class;
-    }
-}
+  <script src="{{ asset('themes/new-theme/public/country_form.bundle.js') }}"></script>
+{% endblock %}
