--- a/admin-dev/themes/new-theme/scss/components/_password.scss
+++ b/admin-dev/themes/new-theme/scss/components/_password.scss
@@ -10,7 +10,7 @@
   .progress-bar {
     text-align: center;
 
-    & > div {
+    > div {
       width: 0%; /* Adjust with JavaScript */
       height: 5px;
       background-color: $white; /* Adjust with JavaScript */
