--- a/admin-dev/themes/new-theme/scss/components/_ps_radio.scss
+++ b/admin-dev/themes/new-theme/scss/components/_ps_radio.scss
@@ -3,7 +3,7 @@
     position: absolute;
     left: -9999px;
 
-    & + label {
+    + label {
       position: relative;
       display: inline-block;
       padding-left: 28px;
