--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -96,7 +96,7 @@
 // Other
 @import "components/tinymce";
 
-@import "components/layout/right-sidebar.scss";
+@import "components/layout/right-sidebar";
 @import "../css/module/drop.css";
 
 // Main Layout
