--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/FormTheme/catalog_price_rules.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/FormTheme/catalog_price_rules.html.twig
@@ -23,10 +23,10 @@
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  * #}
 
-{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
+{% extends '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig' %}
 
 {% block catalog_price_rules_widget %}
-  <div id="catalog-price-rules-container" class="hide">
+  <div id="catalog-price-rules-container">
     {{ block('catalog_price_rules_list') }}
     {{ form_widget(form) }}
   </div>
