--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/TaxRulesGroup/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/TaxRulesGroup/Blocks/form.html.twig
@@ -1,5 +1,4 @@
-<?php
-/**
+{#**
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -22,22 +21,36 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- */
+ *#}
 
-namespace PrestaShop\PrestaShop\Core\Domain\TaxRulesGroup\Exception;
+{% form_theme taxRulesGroupForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
-/**
- * Thrown when tax rules group constraint is violated
- */
-class TaxRulesGroupConstraintException extends TaxRulesGroupException
-{
-    /**
-     * Thrown when provided tax rules group id value is not valid
-     */
-    public const INVALID_ID = 1;
+{{ form_start(taxRulesGroupForm) }}
+<div class="card">
+  <div class="card-header">
+    <i class="material-icons">payments</i>
+    {{ 'Tax Rules'|trans({}, 'Admin.International.Feature') }}
+  </div>
 
-    /**
-     * @var int - error is raised when a value in array is not integer type
-     */
-    public const INVALID_SHOP_ASSOCIATION = 2;
-}
+  <div class="card-body">
+    <div class="form-wrapper">
+      {{ form_errors(taxRulesGroupForm) }}
+      {% block tax_rules_group_form_widget %}
+        {{ form_widget(taxRulesGroupForm) }}
+      {% endblock %}
+    </div>
+  </div>
+
+  <div class="card-footer">
+    <div class="d-inline-flex">
+      <a href="{{ path('admin_taxes_index') }}" class="btn btn-outline-secondary">
+        {{ 'Cancel'|trans({}, 'Admin.Actions') }}
+      </a>
+    </div>
+    <div class="d-inline-flex float-right">
+      <button class="btn btn-primary" id="save-and-stay-button">{{ 'Save and stay'|trans({}, 'Admin.Actions') }}</button>
+    </div>
+  </div>
+
+</div>
+{{ form_end(taxRulesGroupForm) }}
