--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/International/TaxRulesGroup/edit.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/International/TaxRulesGroup/edit.html.twig
@@ -1,5 +1,4 @@
-<?php
-/**
+{#**
  * Copyright since 2007 PrestaShop SA and Contributors
  * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
  *
@@ -22,22 +21,16 @@
  * @author    PrestaShop SA and Contributors <contact@prestashop.com>
  * @copyright Since 2007 PrestaShop SA and Contributors
  * @license   https://opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
- */
+ *#}
 
-namespace PrestaShop\PrestaShop\Core\Domain\TaxRulesGroup\Exception;
+{% extends '@PrestaShop/Admin/layout.html.twig' %}
 
-/**
- * Thrown when tax rules group constraint is violated
- */
-class TaxRulesGroupConstraintException extends TaxRulesGroupException
-{
-    /**
-     * Thrown when provided tax rules group id value is not valid
-     */
-    public const INVALID_ID = 1;
+{% block content %}
+  {{ include('@PrestaShop/Admin/Improve/International/TaxRulesGroup/Blocks/form.html.twig', {'taxRulesGroupForm': taxRulesGroupForm}) }}
+{% endblock %}
 
-    /**
-     * @var int - error is raised when a value in array is not integer type
-     */
-    public const INVALID_SHOP_ASSOCIATION = 2;
-}
+{% block javascripts %}
+  {{ parent() }}
+
+  <script src="{{ asset('themes/new-theme/public/tax_rules_group.bundle.js') }}"></script>
+{% endblock %}
