Apply suggestions from code review
Translation changes

Co-authored-by: Julie Varisellaz <70583503+Julievrz@users.noreply.github.com>

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -31,14 +31,14 @@
     <thead class="thead-default">
     <tr>
       <th>{{ 'ID'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'Name'|trans({}, 'Admin.Catalog.Feature') }}</th>
+      <th>{{ 'Name'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Currency'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Country'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Group'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'Shop'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'Reduction'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'Reduction Type'|trans({}, 'Admin.Global') }}</th>
-      <th>{{ 'From Quantity'|trans({}, 'Admin.Global') }}</th>
+      <th>{{ 'Reduction'|trans({}, 'Admin.Catalog.Feature') }}</th>
+      <th>{{ 'Reduction type'|trans({}, 'Admin.Catalog.Feature') }}</th>
+      <th>{{ ' ≥ Units'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'From'|trans({}, 'Admin.Global') }}</th>
       <th>{{ 'To'|trans({}, 'Admin.Global') }}</th>
       <th></th>
