Changed the way link for catalog price rule list is done

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/CatalogPriceRule/Blocks/list.html.twig
@@ -78,3 +78,8 @@
     </tr>
   </script>
 </div>
+
+<a class="form-control-static external-link" href="{{ getAdminLink("AdminSpecificPriceRule") }}" target="_blank">
+  {{ 'Manage catalog price rules'|trans({}, 'Admin.Catalog.Feature') }}
+</a>
+
