--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/not_found.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/not_found.html.twig
@@ -36,7 +36,7 @@
         <p>{{ 'This combination doesn\'t exist anymore'|trans({}, 'Admin.Catalog.Feature') }}</p>
       </div>
         <div class="row justify-content-center">
-            <button type="button" aria-label="Close" class="btn btn-primary" onClick="document.location.reload()">
+            <button type="button" aria-label="Close" class="btn btn-primary" data-dismiss="modal">
                 <span>{{ 'Close and refresh'|trans({}, 'Admin.Catalog.Feature') }}</span>
             </button>
         </div>
